--- a/_posts/2024-01-01-NITEC.md
+++ b/_posts/2024-01-01-NITEC.md
@@ -1,7 +1,7 @@
 ---
 title: "NITEC: Versatile Hand-Annotated Eye Contact Dataset for Ego-Vision Interaction"
 description: " "
-background: /assets/theme/images/header-img.jpg
+background: /assets/theme/images/home.png
 image: /assets/theme/images/nitec.png
 author: Thorsten Hempel, Magnus Jung, Ahmed abdelrahman, ayoub al-hamadi
 categories:
