--- a/_posts/2025-04-29-imhere.md
+++ b/_posts/2025-04-29-imhere.md
@@ -1,7 +1,7 @@
 ---
 title: IM HERE – Interaction Model for Human Effort based Robot Engagement
 description: We present our novel engagement modeling framework IMHERE, designed to improve human-robot interaction by capturing relational dynamics using a formal effort-based approach. The model applies to human-human, human-robot, and robot-robot interaction, and offers a modular implementation supporting real-world robotics integration.
-background: /assets/theme/images/header-img.jpg
+background: /assets/theme/images/home.png
 image: /assets/theme/images/imhere.png
 author: "Dominykas Strazdas, Magnus Jung, Jan Marquenie, Ingo Siegert, Ayoub Al-Hamadi"
 categories: [Publication, Conference, Human-Robot Interaction, Engagement]
@@ -19,7 +19,7 @@ The model captures bilateral relationships between any two entities—whether hu
 Unlike traditional models, \IMHERE bridges **subjective and objective perspectives**, includes mechanisms to identify **miscommunication**, and introduces principles for **social norm-compliant interaction**. The model applies equally to **individual** and **group interactions**, integrating concepts like **F-formations** and enabling social robots to reason about their role in dynamic, multi-party environments.
 
 To support adoption, we provide an **open-source simulator** that enables testing and visualizing engagement in a variety of HRI scenarios.
-![](/enabling/assets/theme/images/imhere.png)
+![](/semiac/assets/theme/images/imhere.png)
 
 ---
 
