Update tags for conference publication

--- a/_posts/2025-04-29-imhere.md
+++ b/_posts/2025-04-29-imhere.md
@@ -6,7 +6,7 @@ image: /assets/theme/images/imhere.png
 author: "Dominykas Strazdas, Magnus Jung, Jan Marquenie, Ingo Siegert, Ayoub Al-Hamadi"
 categories: [Publication, Conference, Human-Robot Interaction, Engagement]
 conference: 
-tags: [ROBOVIS 2025, Conference]
+tags: [IEEE, Conference]
 
 ---
 
